# cpp_python_convert

./: README.md  cv2.cpp  cvcv2.cpp  cvcv2.pyx  opencv_mat.cpp  setup.py  setup_opencv_mat.py  t.py
boost_python/: CMakeLists.txt  design_member_pointer.cpp  inner_member_pointer.cpp  main.cpp  string_member_pointer.cpp
boost_python/include/: a.hpp  b.hpp  the_a.hpp
boost_python/src/: a.cpp  b.cpp  the_a.cpp
